Update README.md
Add more examples